<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AnonymousSection.CreateAnonymousRoom">

    <TextView
        android:id="@+id/create_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ubuntu_regular"
        android:text="@string/create_anonymous_room"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/anonymous_img"
        />


    <ImageView
        android:id="@+id/anonymous_img"
        android:layout_width="261dp"
        android:layout_height="180dp"
        android:src="@drawable/anonymous"
        app:layout_constraintBottom_toTopOf="@+id/guideline1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_tv" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.40" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />

    <EditText
        android:id="@+id/anonymous_create_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="@string/room_name"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingStart="10dp"
        android:fontFamily="@font/segoe_ui"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline1"
        app:layout_constraintBottom_toTopOf="@id/create_ano_room_btn"/>

    <Button
        android:id="@+id/create_ano_room_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/anonymous_create_et"
        app:layout_constraintBottom_toTopOf="@id/guideline2"
        android:backgroundTint="#364F6B"
        android:textSize="15sp"
        android:padding="15dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>